# candidates2025

./: .gitignore  CMakeLists.txt  README.md  calibration.csv  calibration.py  calibration_original.csv  main.cpp  pico_sdk_import.cmake
lib/hardware/: action_button.cpp  action_button.h  button.h  compass_classes.cpp  compass_classes.h  kicker.cpp  kicker.h  light_sensor.cpp  light_sensor.h  motor.cpp  motor.h  oled.cpp  oled.h
lib/hardware/Button/: button.cpp  button.h
lib/hardware/OLED/: font.h  ssd1306.c  ssd1306.h  ui.cpp
lib/software/: binarySerializationData.h  calibrations.h  font.h  hex.cpp  hex.h  knn.cpp  knn.h  pid.cpp  pid.h  serializer.cpp  serializer.h
pico-lib/: gpio.h  i2c.h  serial.h  time.h
pico-lib/definitions/: gpio.cpp  i2c.cpp  time.cpp
